--- a/assets/theme2/customstyle.css
+++ b/assets/theme2/customstyle.css
@@ -21,6 +21,29 @@
     .ow-navigation.navbar-default .navbar-nav > li > a {
         padding: 30px 0 30px;
     }
+    .ow-navigation.navbar-default .navbar-nav > li > a::before {
+        background-color: #e2b13c;
+        border-right: 4px solid #222222;
+        box-shadow: -3px 0 0 0 #fff inset;
+        content: "";
+        display: inline-block;
+        height: 2px;
+        left: 0;
+        right: 0;
+        bottom: 25px;
+        opacity: 0;
+        position: absolute;
+        width: 0;
+        -webkit-transition: all 1s ease 0s;
+        -moz-transition: all 1s ease 0s;
+        -o-transition: all 1s ease 0s;
+        transition: all 1s ease 0s;
+    }
+    .ow-navigation .navbar-brand > img {
+    display: inline-block;
+    margin-right: 10px;
+    height: 78px;
+}
 }
 
 
@@ -29,11 +52,7 @@
         margin-top: 0px;
     }
 }
-.ow-navigation .navbar-brand > img {
-    display: inline-block;
-    margin-right: 10px;
-    height: 78px;
-}
+
 
 
 .top-header .top-content::after {
