--- a/assets/theme2/customstyle.css
+++ b/assets/theme2/customstyle.css
@@ -298,3 +298,59 @@ background: linear-gradient(39deg, rgba(255,136,0,1) 0%, rgba(255,255,255,1) 50%
     50%{background-position:100% 50%}
     100%{background-position:0% 50%}
 }
+
+
+
+.medialinkdesing{
+    height:250px;
+        background: #f29638;
+          display: flex;
+ 
+}
+.media-item-block{
+    height: 170px;
+
+    cursor: pointer;
+    color: white;
+    padding: 20px;
+    margin:15px;
+    white-space: normal;
+    font-size: 15px;
+    background: #111111;
+    transition: all 0.3s;
+    border-radius: 25px;
+    border-top-right-radius: 0px;
+    border-bottom-left-radius: 0px;
+
+}
+
+.media-item-block:hover{
+     border-top-right-radius: 25px;
+    border-bottom-left-radius: 25px;
+}
+
+.medialinkdesing-slider{
+    margin-top: 20px;
+}
+
+
+
+.media-item-block h3{
+    font-size: 17px;
+    /* line-height: 1.3; */
+    position: absolute;
+   
+    bottom: 15px;
+    color: white;
+    font-weight: 400;
+    font-style: italic;
+}
+
+.media-item-block a{
+
+    /* line-height: 1.3; */
+    position: absolute;
+    bottom: 25px;
+    right:31px;
+    color: white!important;
+}
