--- a/assets/theme2/customstyle.css
+++ b/assets/theme2/customstyle.css
@@ -354,3 +354,13 @@ background: linear-gradient(39deg, rgba(255,136,0,1) 0%, rgba(255,255,255,1) 50%
     right:31px;
     color: white!important;
 }
+
+
+.ow-navigation.navbar-default .navbar-nav li a {
+    font-size: 12px;
+    color: #777;
+    text-transform: uppercase;
+    font-weight: 600;
+    font-family: 'Poppins', sans-serif;
+    letter-spacing: 1px;
+}
